--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="Sistem Manufaktur"
-APP_ENV=production
+APP_ENV=local
 APP_KEY=
-APP_DEBUG=false
-APP_URL=https://<railway-app-name>.up.railway.app
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=en
@@ -19,13 +19,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Database Configuration (MySQL untuk production)
 DB_CONNECTION=mysql
-DB_HOST=
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=manufaktur_db
+DB_USERNAME=root
 DB_PASSWORD=
 
+# Session, Cache, Queue menggunakan file (lebih stabil untuk production)
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -46,11 +48,20 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Mail Configuration (sesuaikan dengan provider Anda)
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=manufaktursistem1993@gmail.com
-MAIL_PASSWORD=
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=manufaktursistem1993@gmail.com
-MAIL_FROM_NAME="Sistem Manufaktur PT Bu Anna"
+MAIL_FROM_ADDRESS=your-email@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+VITE_APP_NAME="${APP_NAME}"
